--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,9 @@
 use_frameworks!
 
-platform :ios, '8.0'
+platform :ios, '9.0'
 
 target 'Define_Example' do
-  pod 'Define', :path => '../'
+ pod 'Define', :git => 'https://github.com/MasterYong/Define.git'
 
   target 'Define_Tests' do
     inherit! :search_paths
